Fix whitespace and concurrency issues.

--- a/src/client/components/Doc.styl
+++ b/src/client/components/Doc.styl
@@ -7,7 +7,7 @@ tertiary = #2acce5
     cursor: pointer
     background-color: tertiary
 
-quvl-tag:not([data-id=''])
+quvl-tag:not([data-id='']):not([data-id=' '])
     cursor: pointer
     background-color: highlight
 quvl-tag.qv-hide
